# tpane

./: .gitignore  2026-06-20-castr-design.md  CHANGELOG.md  Cargo.toml  README.md  install.sh  mise.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: Makefile  changelog.md  configuration.md  index.md  install.md  lua-api.md  package-lock.json  package.json  pane-detection.md  plugins.md  quick-start.md  reusable-panes.md  status-bar.md
docs/.vitepress/: config.ts
docs/superpowers/plans/: 2026-06-20-s2-hot-reload.md
docs/superpowers/specs/: 2026-06-20-castr-control-ui-design.md  2026-06-20-castr-implementation-design.md  2026-06-20-castr-lua-kinds.md
plugins/agents/: init.lua
plugins/navigator/: init.lua
plugins/open-url/: init.lua
plugins/pane-detection/: init.lua
plugins/sensible/: init.lua
plugins/themes/: init.lua  palettes.tsv
plugins/yank/: init.lua
src/: daemon.rs  exe_identity.rs  lua_runtime.rs  main.rs  plugins.rs  process.rs  protocol.rs  store.rs  tmux.rs
src/lua/: builtin_kinds.lua  prelude.lua  widgets.lua
