[package]
name = "tpane"
version = "0.4.0"
edition = "2024"
license = "MIT"
description = "Configure tmux with Lua."
repository = "https://github.com/phcurado/tpane"
homepage = "https://github.com/phcurado/tpane"
keywords = ["tmux", "lua", "terminal", "multiplexer"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
