[package]
name = "tpane"
version = "0.5.3"
edition = "2024"
rust-version = "1.85"
authors = ["Paulo Curado"]
license = "MIT"
description = "Configure tmux with Lua."
readme = "README.md"
repository = "https://github.com/phcurado/tpane"
homepage = "https://github.com/phcurado/tpane"
documentation = "https://github.com/phcurado/tpane/blob/main/docs/lua-api.md"
keywords = ["tmux", "lua", "terminal", "multiplexer"]
categories = ["command-line-utilities"]
exclude = [".github/**"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
