[package]
name = "tpane"
version = "0.5.7"
authors = ["Paulo Curado"]
categories = ["command-line-utilities"]
documentation = "https://phcurado.github.io/tpane/lua-api"
edition = "2024"
exclude = [".github/**"]
homepage = "https://phcurado.github.io/tpane/"
keywords = ["tmux", "lua", "terminal", "multiplexer"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/phcurado/tpane"
rust-version = "1.85"
description = "Configure tmux with Lua."

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
